--- a/MobileKart/Views/Shared/_Layout.cshtml
+++ b/MobileKart/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Product Admin", "Index", "ProductManager")</li>
-                    <li>@Html.ActionLink("Category Admin", "Index", "CategoryManager")</li>
+                    <li>@Html.ActionLink("Category Admin", "Index", "ProductCategoryManager")</li>
                 </ul>
             </div>
         </div>
